# rusty-iterators-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  build.py  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  pages.yml
benchmarks/: __init__.py  __main__.py  manager.py  scenarios.py
benchmarks/scenarios/: iterators.py
core/: interface.pyx  rusty_iter_core.pyx  test.py
examples/advent_of_code/: main.py
lib/: test.py
rusty_iterators/: __init__.py  _entrypoint.py  aiter.py  exceptions.py  iter.py  maybe.py
rusty_iterators/core/: __init__.py  async_interface.pxd  async_interface.pyi  async_interface.pyx  interface.pxd  interface.pyi  interface.pyx  rusty_iter_core.pyi  rusty_iter_core.pyx  wrappers.pyi  wrappers.pyx
rusty_iterators/iterators/: __init__.py  _async.py  _entrypoint.py  _protocols.py  _shared.py  _sync.py  _types.py
rusty_iterators/iterators/pararell/: RATIONALE.md  _consumers.py  _folders.py  _iter.py  _producers.py  _reducers.py
rusty_iterators/lib/: __init__.py  _async.py  _entrypoint.py  entrypoint.py
rusty_iterators/lib/_async/: __init__.py  _adapter.py  _entrypoint.py  _interface.py
rusty_iterators/stubs/core/: interface.pyi
rusty_iterators/sync_iterators/: __init__.py  _internal.py  _types.py
rusty_iterators_cython/: interface.pyx  iter.pyx
rusty_iterators_new/: rusty_iter_core.pyi
rusty_iterators_new/core/: interface.pyx
src/rusty_iterators/: _versioned_types.py
src/rusty_iterators/core/: async_interface.pxd  async_interface.pyx  interface.pxd  interface.pyi
stubs/rusty_iterators/core/: __init__.py  interface.pyi  wrappers.pyi
stubs/rusty_iterators/lib/: __init__.py  entrypoint.pyi
tests/: conftest.py  test_cycle.py  test_enumerate.py  test_filter.py  test_filter_map.py  test_iter.py  test_map.py
tests/integration/: test_iter_chains.py  test_iterator_integrations.py
tests/types/: verify_async_types.py  verify_types.py
tests/unit/: test_cycle.py  test_entrypoint.py  test_filter.py  test_iterator.py  test_map.py
tests/unit/async/: _utils.py  test_async_iter.py  test_async_map.py
tests/unit/async_iterators/: _utils.py  test_acollect.py  test_anext.py  test_copy.py
tests/unit/iter/: test_advance_by.py  test_collect.py  test_copy.py  test_count.py  test_for_each.py  test_last.py  test_next.py  test_nth.py
tests/unit/sync/: test_advance_by.py  test_all.py  test_any.py  test_chain.py  test_cycle.py  test_entrypoint.py  test_enumerate.py  test_filter.py  test_flatten.py  test_inspect.py  test_iterator.py  test_map.py  test_moving_window.py  test_peekable.py  test_skip.py  test_step_by.py  test_take.py  test_unique.py  test_zip.py
tests/unit/sync_iterators/: test_advance_by.py  test_all.py  test_any.py  test_collect.py  test_copy.py  test_count.py  test_cycle.py  test_flatten.py  test_fold.py  test_for_each.py  test_last.py  test_next.py  test_nth.py  test_rusty_iter.py  test_sum.py  test_try_sum.py  test_unzip.py
