[build-system]
requires = ["setuptools==75.8.0", "cython==3.0.11"]
build-backend = "setuptools.build_meta"

[project]
name = "rusty-iterators"
version = "1.0.0"
description = "Rust-like iterators in Python."
authors = [{ name = "Wiktor Nowak" }, { name = "Dawid Sielużycki" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { file = "LICENSE.md" }

[dependency-groups]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.1",
    "setuptools==75.8.0",
    "tox==4.24.2",
    "cython==3.0.11",
    "types-setuptools==75.8.0.20250110",
]

benchmarks = [
    "more-itertools==10.6.0",
]

docs = ["mkdocs==1.6.1"]
all = [{ include-group = "dev" }, { include-group = "docs" }]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108", "S603", "S607"]

[tool.mypy]
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true

enable_error_code = [
    "explicit-override",
    "ignore-without-code",
    "narrowed-type-not-subtype",
    "truthy-bool",
]

[[tool.mypy.overrides]]
module = ["cython.*", "Cython.Build"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
envlist = ["py310", "py311", "py312", "py313"]

[tool.tox.test]
deps = ["uv"]
ignore_errors = true
commands = [
    [
        "uv run ruff format --check --target_version={envname}",
    ],
    [
        "uv run ruff check --target_version={envname}",
    ],
    [
        "uv run mypy . --check --target_version={envname}",
    ],
    [
        "uv run pytest -s -v --target_version={envname}",
    ],
]
